--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <nav>
-            <a href="./index.html"><span>WEB</span>STUDIO</a>
+            <a href="./index.html">WEBSTUDIO</a>
             <ul>
                 <li><a href="#">Studio</a></li>
                 <li><a href="#">Portfolio</a></li>
@@ -95,7 +95,7 @@
     </main>
 
     <footer>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
